--- a/testing_multilingual_setup.qmd
+++ b/testing_multilingual_setup.qmd
@@ -103,7 +103,8 @@ required_packages <- c( # List all required R packages
   "unix",
   "velox",
   "viridis",
-  "wbstats") 
+  "wbstats",
+  "wdpar") 
 missing <- !(required_packages %in% installed.packages())
 
 # Install 
@@ -160,12 +161,92 @@ save_from_s3 <- function(x, y) {
 # copy from S3 to local
 map2(my_tifs, my_tifs_dest, save_from_s3)
 
+# Select PA shp
+my_PAs <- my_files %>%
+  filter(str_detect(Key, "/PAs/WDPA")) %>%
+  pluck("Key")
+# Create paths in local machine
+my_PAs_dest <- my_PAs %>%
+  str_replace("Replication_wolf/", "data_input/")
+# Retrieve the data
+map2(my_PAs, my_PAs_dest, save_from_s3)
 
-put_object(
-  file = "data_processed/threatened.tif",
-  object = "Replication_wolf/threatened.tif",
-  bucket = "fbedecarrats",
-  region = "")
+
+# Select WWF shp
+my_biomes <- my_files %>%
+  filter(str_detect(Key, "/official/")) %>%
+  pluck("Key")
+# Create paths in local machine
+my_biomes_dest <- my_biomes %>%
+  str_replace("Replication_wolf/", "data_input/")
+# Retrieve the data
+map2(my_biomes, my_biomes_dest, save_from_s3)
+
+# # Create a function to put data from local machine to S3
+# put_to_s3 <- function(x, y) {
+#   aws.s3::put_object(
+#     file = x,
+#     object = y,
+#     bucket = "fbedecarrats",
+#     region = "",
+#     multipart = TRUE)
+# }
+# 
+# # Apply it to the PAs
+# wdpa_local_files <- list.files("data_input/PAs", full.names = TRUE)
+# wdpa_s3_objects <- wdpa_local_files %>%
+#   str_replace("data_input", "Replication_wolf")
+# map2(wdpa_local_files, wdpa_s3_objects, put_to_s3)
+# # Also to the source
+# put_to_s3("data_input/WDPA_Jan2023_Public.gdb.zip", 
+#           "Replication_wolf/WDPA_Jan2023_Public.gdb.zip")
+```
+
+get the right WDPA data. Wolf et al. use the data from January 2020.
+
+```{r}
+#| eval: false
+
+library(tidyverse)
+library(wdpar)
+library(sf)
+if (!dir.exists("data_input/PAs")) {
+  # Get the data from protectedplanet
+  wdpa_global <- wdpa_fetch("global", download_dir = "data_input")
+  # Build a name with same structure than Wolf et al.
+  wdpa_file_name <- list.files("data_input", pattern = ".gdb.zip") %>%
+    str_remove("_Public.gdb.zip") %>%
+    paste0("data_input/PAs/", ., "-shapefile-polygons.shp")
+  # Filter for polygons (filtering out points to be sure not to exclude something
+  # by mistake) and write locally.
+  wdpa_global %>%
+    filter(st_geometry_type(.) != "MULTIPOINT") %>%
+    st_write(dsn = wdpa_file_name)
+}
+
+wdpa_global %>%
+  #"We excluded PAs from our primary analysis that: 
+  #[1] had point (centroid) information only, 
+  filter(st_geometry_type(.) != "MULTIPOINT") %>%
+  #[2] were exclusively marine, 
+  filter(MARINE != "2") %>% #0: 100% terrestrial, 1: both, 2: 100% marine
+  #[3] were established after 2000 since the forest loss data range from 2001 to 2018,
+  filter(STATUS_YR > 2000) %>%
+  #[4] had area less than 1 km2 since forest change in small PAs can be hard to
+  # estimate accurately, 
+  filter(REP_AREA - REP_M_AREA >= 1) %>%
+  st_write(dsn = wdpa_file_name)
+
+# 48066 PAs filtered. Check as this seems quite low compared to 286356 in the 
+# WDPA global database.
+```
+
+Get WWF ecoregions
+
+```{r}
+my_url <- "https://files.worldwildlife.org/wwfcmsprod/files/Publication/file/6kcchn7e3u_official_teow.zip"
+download.file(my_url, destfile = "temp/teow.zip")
+unzip(zipfile = "temp/teow.zip", exdir = "data_input")
 ```
 
 ## Set up python
@@ -264,15 +345,21 @@ replace_all <- function(x, pattern, replacement) {
     writeLines(x)
 }
 
+# Replace working directory or data sources paths
 list.files(pattern = "[0-9]{3}.*") %>%
   map(replace_all, "/home/chrisgraywolf/analysis_desktop/", "")
+list.files(pattern = "[0-9]{3}.*") %>%
+  map(replace_all, "/home/chrisgraywolf/shared/analysis/PA_matching", ".")
 ```
 
 ### Add required subfolders
 
 ```{r}
 dir.create("data_input")
+dir.create("data_input/PAs")
 dir.create("temp")
+dir.create("data_processed")
+dir.create("data_processed/rasters")
 ```
 
 ## Adapt to Windows system (optionnal)
@@ -324,3 +411,19 @@ file.rename(list.files(path = "data_input/range_maps", pattern ="REPTILES_PART2"
 ```
 
 ## 
+
+## Executing 004 - join rasters
+
+\# The call below throws errors messages during execution:
+
+\# Error in x\$.self\$finalize() : attempt to apply non-function
+
+\# According to {raster}
+
+\# https://github.com/rspatial/raster/issues/282
+
+URL for Curtis et al. was: https://science.sciencemag.org/highwire/filestream/715492/field_highwire_adjunct_files/2/aau3445-Data-S3.tif
+
+It is now: https://www.science.org/action/downloadSupplement?doi=10.1126%2Fscience.aau3445&file=aau3445-data-s3.tif
+
+The name of the file has been changed to lowercase: data_input/aau3445-Data-S3.tif becomes aau3445-data-s3.tif
